manifests/k8slimiter.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8slimiter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8slimiter-deployment
  namespace: k8slimiter
  labels:
    app.kubernetes.io/instance: k8slimiter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8slimiter
      app.kubernetes.io/instance: k8slimiter
  template:
    metadata:
      labels:
        app: k8slimiter
        app.kubernetes.io/instance: k8slimiter
    spec:
      containers:
        - name: k8slimiter
          image: k8slimiter:0.1.0
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: k8slimiter-certificate
              mountPath: /etc/certs
              readOnly: true
            - name: k8slimiter-config
              mountPath: /etc/k8slimiter
              readOnly: true
      volumes:
        - name: k8slimiter-certificate
          secret:
            secretName: k8slimiter-certificate
        - name: k8slimiter-config
          configMap:
            name: k8slimiter-config
---
apiVersion: v1
kind: Service
metadata:
  name: k8slimiter-service
  namespace: k8slimiter
  labels:
    app.kubernetes.io/instance: k8slimiter
spec:
  selector:
    app: k8slimiter
  ports:
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8slimiter-pod-creation
  annotations:
    cert-manager.io/inject-ca-from: k8slimiter/k8slimiter-certificate
webhooks:
  - name: k8slimiter-pod-creation.k8slimiter.svc
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: k8slimiter-service
        namespace: k8slimiter
        path: "/validate"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["deployments", "statefulsets"]
    failurePolicy: Ignore
    sideEffects: None
